# menor_preco_farmacia

./: .env.example  .gitignore  AGENTS.md  LLM_CONFORMANCE_CHECKLIST.md  LLM_FINAL_DIAGNOSTIC_TEMPLATE.md  LLM_OPERATOR_MANUAL.md  LLM_TOOL_EXAMPLES.md  MONOREPO.md  README.md  arquitetura-mcp.md  contrato-entradas-multimodais.md  pyproject.toml
apps/frontend/: README.md
data/reference/: README.md
deploy/: README.md
deploy/caddy/: super-melhor-preco-farmacia-api.Caddyfile
deploy/env/: app.env.example
deploy/systemd/: super-melhor-preco-farmacia-api.service  super-melhor-preco-farmacia-scheduler.service  super-melhor-preco-farmacia-scheduler.timer  super-melhor-preco-farmacia-worker.service
infra/: .env.phase1.example  README.md  docker-compose.phase1.yml
services/assistant-service/: README.md
services/pricing-core/: .dockerignore  .env.example  Dockerfile  README.md
src/: init_db.py  main.py  mcp_server.py  process_search_jobs.py  run_operational_cycle.py  run_scheduled_collection.py  worker_main.py
src/api/: catalog_routes.py  deps.py  ops_routes.py
src/core/: config.py
src/models/: base.py
src/scrapers/: base.py  droga_raia.py  drogaria_catarinense.py  drogaria_sao_paulo.py  drogasil.py  farmacia_jaragua.py  farmasesi.py  panvel.py  preco_popular.py  sao_joao.py
src/services/: catalog_queries.py  demand_tracking.py  external_health.py  matching.py  operation_jobs.py  operational_cycle.py  ops.py  retention.py  scheduled_collection.py  scraper_registry.py  search_jobs.py  tool_models.py  (+1 more)
tests/: test_embedded_worker.py  test_tool_helpers.py
(+33 files in other folders)
